--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "natours project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "Andrii",
   "license": "ISC",
