--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "natours project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "SET NODE_ENV=development & nodemon server.js",
+    "start:prod": "SET NODE_ENV=production & nodemon server.js"
   },
   "author": "Andrii",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
